plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id "me.modmuss50.mod-publish-plugin" version "1.1.0"
    id 'net.neoforged.moddev' version '2.0.141'
    id 'com.gradleup.shadow' version '9.4.1' // https://github.com/GradleUp/shadow/pull/876
}

tasks.named('wrapper', Wrapper).configure {
    // Define wrapper values here so as to not have to always do so when updating gradlew.properties.
    // Switching this to Wrapper.DistributionType.ALL will download the full gradle sources that comes with
    // documentation attached on cursor hover of gradle classes and methods. However, this comes with increased
    // file size for Gradle. If you do switch this to ALL, run the Gradle wrapper task twice afterwards.
    // (Verify by checking gradle/wrapper/gradle-wrapper.properties to see if distributionUrl now points to `-all`)
    distributionType = Wrapper.DistributionType.BIN
}

configurations {
    shadowCommon
    implementation.extendsFrom shadowCommon
    runtimeClasspath.extendsFrom shadowCommon
}

version = "${minecraft_version}-NeoForge-${mod_version}"
group = "snownee.kiwi" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
var realVersion = project.mod_version + '+neoforge'

java.toolchain.languageVersion = JavaLanguageVersion.of(25)
println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))

if (System.getenv().BUILD_NUMBER != null) {
    // Maven version scheme uses dot to separate things
    version += ".${System.getenv().BUILD_NUMBER}"
}

neoForge {
    // We currently only support NeoForge versions later than 21.0.x
    // See https://projects.neoforged.net/neoforged/neoforge for the latest updates
    version = neo_version

    // Validate AT files and raise errors when they have invalid targets
    // This option is false by default, but turning it on is recommended
    validateAccessTransformers = true

    accessTransformers = ["src/main/resources/META-INF/accesstransformer.cfg"]

    runs {
        client {
            client()
        }
        data {
            data()
        }
        server {
            server()
        }
    }

    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
        }
    }

    runs {
        // applies to all the run configs below
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            systemProperty 'forge.logging.console.level', 'debug'
        }

        client {
            client()
            ideName = "Run ${project.mod_id} - Client"
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
            programArguments = ['--username', 'Dev']
        }
        data {
            clientData()
            ideName = "Run ${project.mod_id} - Data"
        }
        server {
            server()
            ideName = "Run ${project.mod_id} - Server"
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
            programArgument '--nogui'
        }

        gameTestServer {
            type = "gameTestServer"
            gameDirectory = project.file('runs/client')
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }
    }
}

def excludes = [
        "/assets/${project.mod_id}/blockstates",
        "/assets/${project.mod_id}/models",
        "/assets/${project.mod_id}/lang/en_us.existing.yaml",
        "/assets/kaleidos",
        "/assets/kswitch",
        "/assets/test",
        "/snownee/${project.mod_id}/datagen/KiwiDataGen.class",
        "/snownee/${project.mod_id}/test",
        "/data",
        "/.cache",
        "/third_party"
]
def b = [
        "Specification-Title"     : project.name,
        "Specification-Vendor"    : 'Snownee',
        "Specification-Version"   : '1',
        "Implementation-Title"    : project.name,
        "Implementation-Version"  : realVersion,
        "Implementation-Vendor"   : 'Snownee',
        "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
]

sourceSets {
    main.resources.srcDirs += "$rootDir/src/generated/resources"
    main.java.srcDirs += "$rootDir/annotation/src/main/java"
    main.resources.srcDirs += "$rootDir/annotation-processor/src/main/resources"
    main.java.srcDirs += "$rootDir/annotation-processor/src/main/java"
}

sourceSets {
    processor {
        compileClasspath += sourceSets.main.runtimeClasspath
        runtimeClasspath += sourceSets.main.runtimeClasspath
        java {
            srcDirs = ["$rootDir/annotation-processor/src/main/java"]
        }
        resources {
            srcDirs = ["$rootDir/annotation-processor/src/main/resources"]
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding = "UTF-8"
    it.options.release = 25
    it.options.compilerArgs.add("-Akiwi.clientOnlyMod")
}

shadowJar {
//    from(tasks.jarJar)
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    exclude(excludes)
    manifest { attributes(b) }
    relocate "org.yaml.snakeyaml", "${project.group}.shadowed.org.yaml.snakeyaml"
    relocate "com.ezylang.evalex", "${project.group}.shadowed.com.ezylang.evalex"
    configurations = [project.configurations.shadowCommon]
    archiveClassifier.set('')
}

tasks.register('APJar', Jar) {
    //include "/snownee/kiwi/build"
    //exclude(excludes)
    from(sourceSets.processor.output)
    archiveFileName = "${archiveBaseName}-${archiveVersion}-processor.${archiveExtension}"
}

tasks.register('sourcesJar', Jar) {
    //exclude(excludes)
    manifest { attributes(b) }
    from(sourceSets.main.allJava)
    //archiveFileName = "${archiveBaseName}-${archiveVersion}-source.${archiveExtension}"
    archiveClassifier = 'sources'
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    exclude(excludes)
    manifest { attributes(b) }
}

artifacts {
    shadowJar
}

allprojects {
    repositories {
        mavenCentral()
        exclusiveContent {
            forRepository {
                maven {
                    name = "Modrinth"
                    url = "https://api.modrinth.com/maven"
                }
            }
            filter {
                includeGroup "maven.modrinth"
            }
        }
        maven { url "https://maven.su5ed.dev/releases" }
        maven {
            url = "https://cursemaven.com"
            content {
                includeGroup "curse.maven"
            }
        }
        maven { url "https://maven.shedaniel.me/" }
        maven {
            // location of the maven that hosts JEI files
            name = "Progwml6 maven"
            url = "https://dvs1.progwml6.com/files/maven/"
        }
        maven {
            // location of a maven mirror for JEI files, as a fallback
            name = "ModMaven"
            url = "https://modmaven.dev"
        }
        maven {
            name = "TerraformersMC"
            url = "https://maven.terraformersmc.com/"
        }
    }
}

dependencies {
    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.3.2"))

    implementation project(':annotation')
    annotationProcessor project(':annotation-processor')

    implementation "me.shedaniel.cloth:cloth-config-neoforge:${project.cloth_config_version}"
    shadowCommon("org.yaml:snakeyaml:${project.snakeyaml_version}")
    shadowCommon("com.ezylang:EvalEx:${project.evalex_version}")

//    jarJar(implementation("org.sinytra.forgified-fabric-api:fabric-api-base:0.4.42+d1308ded19"))
//    implementation "org.sinytra.forgified-fabric-api:forgified-fabric-api:0.107.0+2.0.25+1.21.1"

    compileOnly "dev.architectury:architectury-neoforge:${project.architectury_version}"
    compileOnly "me.shedaniel:RoughlyEnoughItems-neoforge:${project.rei_version}"
    compileOnly "me.shedaniel:REIPluginCompatibilities-forge-annotations:12.+"

    implementation "maven.modrinth:jade:26.0.6+neoforge"

    // compile against the JEI API but do not include it at runtime
    compileOnly("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
    compileOnly("mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}")
    // at runtime, use the full JEI jar for Forge
    implementation("mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}")

    compileOnly "dev.emi:emi-neoforge:${emi_version}:api"
    compileOnly "dev.emi:emi-neoforge:${emi_version}"
}

processResources {
    from('src/main/java') {
        include '**/*.json'
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact shadowJar
            artifact sourcesJar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

publishMods {
    file = shadowJar.archiveFile
    additionalFiles.from(sourcesJar.archiveFile)
    changelog = file('CHANGELOG.md').exists() ? file('CHANGELOG.md').text : ''
    type = ['release': STABLE, 'beta': BETA, 'alpha': ALPHA][release_type]
    modLoaders.add("neoforge")
    displayName = "[NeoForge ${supported_version}] ${mod_version}"
    version = realVersion

    curseforge {
        projectId = "549404"
        accessToken = providers.environmentVariable("CURSE_TOKEN")
        minecraftVersions.add(minecraft_version)
        optional("cloth-config")
    }
    modrinth {
        projectId = "ufdDoWPd"
        accessToken = providers.environmentVariable("MODRINTH_TOKEN")
        minecraftVersions.add(minecraft_version)
        optional("cloth-config")
    }
}

tasks.build.dependsOn shadowJar